# digikey_search_tools

./: .gitignore  README.md  pyproject.toml
.agents/skills/digikey-parts/: SKILL.md
.agents/skills/digikey-parts/agents/: openai.yaml
.agents/skills/digikey-parts/references/: kicad_bom_placement_workflow.md  kicad_footprint_pcb_workflow.md  kicad_function_block_layout_workflow.md
.agents/skills/digikey-parts/scripts/: import_kicad_schematic_to_pcb.py  organize_kicad_schematic_blocks.py  validate_kicad_placement.py
.claude/skills/digikey-parts/: SKILL.md
config/: digikey.json
digikey_tools/: __init__.py  api.py  bom.py  cli.py  config.py  env.py  errors.py  kicad.py  library.py  normalize.py  project.py  selection.py  store.py
docs/: agent_usage.md  implementation_plan.md  requirements.md
scripts/: setup_external_use.sh
templates/: selection_criteria.md
tests/: test_bom_store_cli.py  test_config_env.py  test_normalize.py  test_project_external.py
